# Termichat

./: TASK_PROPOSALS.md  install.sh  pyproject.toml  requirements.txt
app/: chat.py  config.py  doctor.py  main.py  ui.py
termichat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
