[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "termichat"
version = "0.2.2"
description = "Linux-native terminal AI chat client"
authors = [{ name="John Eerkens" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rich",
    "prompt-toolkit"
]

[project.scripts]
termichat = "app.main:main"
